src/components/navbar/Navbar.styles.scss
.navbar{
  width: 52%;
  padding: .7em;
  margin: auto;
  top: 15px;
  position: sticky;
  z-index: 1;

  border: .3px solid var(--text-color-10);
  border-radius: 100px;
  background-color: var(--text-color-10);
  backdrop-filter: blur(10px);

  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  gap: 5px;

  .nav-element{
    padding: .7em 2em;
    border-radius: 100px;

    &.selected{
      background-color: var(--text-color-10);
    }
    
    &:hover {
      background-color: var(--text-color-10);
    }
  }

  @media screen and (max-width: 1300px){
    width: 70%;
  }
  
  @media screen and (max-width: 850px){
    width: 90%;
  }

  @media screen and (max-width: 650px){
    width: 100%;
  }
}

